--- a/style.css
+++ b/style.css
@@ -16,12 +16,14 @@ body{
     position: relative;
     background: #ffffff;
     width:  650px;
+    border-radius: 22px;
 }
 .header{
     background: #23aed1;
     color: #ffffff;
     padding: 10px 20px;
     font-weight: 600;
+    border-radius: 20px;
 }
 .header button{
     border-radius: 50%;
@@ -32,31 +34,32 @@ body{
     width:  29px;
     margin-top: -28px;
 }
-.list ul{
+.item{
     position: relative;
-    padding: 20px;
-}
-.list ul li {
-    position: relative;
-    list-style: none;
     padding: 20px 0;
-    /*margin: 0 10px;*/
-    border-bottom: 1px solid #9b9b9b;
-    box-shadow: 0 5px 10px rgb(199, 240, 247);
-    border-bottom-left-radius: 10px;
-    border-top-right-radius: 10px;
+
 }
 .item-btn{
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 1px;
+    border-bottom: 1px solid #8a8a8a;
+    box-shadow: 0 5px 10px rgb(64, 64, 65);
+    padding: 10px;
+    margin: 5px 10px;
+
+}
+.completed{
+    background-color: aquamarine;
 }
 .item-btn i {
     font-size: 18px;
-    margin-left: 20px;
+    margin-left: 15px;
+    cursor: pointer;
 }
-.item-btn span{
-    margin-left: 360px;
+.spn {
+    margin-left: 475px;
+    position: fixed;
 }
 h3{
     margin-left: 20px;
